fixing alignment of work item navigation

--- a/29-grid-portfolio/css/components/works_item.css
+++ b/29-grid-portfolio/css/components/works_item.css
@@ -27,11 +27,16 @@ grid-column: 2 / 7;
 
 }
 
+.works_item_navigation {
+margin-inline-start: -0.75rem;
+}
+
 .works_item_navigation a {
   display: block;
   color: #ccc;
   padding: 0.75rem;
   text-decoration: none;
+
 }
 
 .works_item_navigation a b,
